--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <div class="hero-content reveal">
                     <p class="subtitle"> IT Consultant // IT Engineering // MSc Cybersecurity '26 </p>
                     <h1>Austin B.</h1>
-                    <p class="value-prop">Engineering secure and resilient cloud, network, and security solutions for a global client base with a constant touch of realtime customer service and support. Driven by technology, informed by humanities, and committed to continuous growth.</p>
+                    <p class="value-prop">Developing & Managing resilient Cloud, Systems, and Security Solutions for a Global clientbase with a constant touch of customer service and support. Driven by ambition, grounded by humanities, and committed to lifelong learning.</p>
                     <div class="cta-buttons">
                         <a href="https://www.linkedin.com/in/batulaustin" target="_blank" rel="noopener noreferrer" class="btn"><i data-feather="linkedin"></i>LinkedIn</a>
                         <a href="https://batulmonarchy.github.io" target="_blank" rel="noopener noreferrer" class="btn"><i data-feather="github"></i>GitHub</a>
