--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="description" content="Portfolio of Austin Batul, a Philippines-based IT Consultant specializing in cloud, security, and network solutions for US companies.">
     <meta name="author" content="Austin Batul">
     <meta name="keywords" content="Austin Batul, IT Consultant, Cybersecurity, Cloud Engineer, AWS, Azure, Network Security, Philippines, US companies">
-    <meta property="og:title" content="Austin Batul | IT Consultant Portfolio">
+    <meta property="og:title" content="Austin B. | Web Portfolio">
     <meta property="og:description" content="Architecting secure and resilient cloud, network, and security solutions for a global client base.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://austincolebatu.github.io/"> <!-- Update with your final URL -->
