--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Austin Batul | IT Consultant | Cloud, Systems, & Security | MSc Cybersecurity</title>
+    <title>Austin B. | IT Consultant | Cloud, Systems, & Security | MSc Cybersecurity</title>
     
     <!-- SEO & Social Sharing Meta Tags -->
-    <meta name="description" content="Portfolio of Austin Batul, a Philippines-based IT Consultant specializing in cloud, security, and network solutions for US companies.">
+    <meta name="description" content="Portfolio of Austin B., a Philippines-based IT Consultant specializing in cloud, systems, and security solutions for US companies.">
     <meta name="author" content="Austin Batul">
     <meta name="keywords" content="Austin Batul, IT Consultant, Cybersecurity, Cloud Engineer, AWS, Azure, Network Security, Philippines, US companies">
     <meta property="og:title" content="Austin B. | Web Portfolio">
