--- a/index.html
+++ b/index.html
@@ -698,14 +698,14 @@
 
         // --- CERTIFICATIONS LOGIC ---
         const certificationsData = [
+            // CompTIA
+            { vendor: 'CompTIA', title: 'CompTIA Security+', date: new Date('2025-10-06'), url: 'https://www.credly.com/badges/1aace285-e443-4881-a5f3-8748fb322ff3/public_url' },  
+          
             // EF-SET
             { vendor: 'EF SET', title: 'EF SET English Certificate (C2 Proficient)', date: new Date('2025-08-01'), url: 'https://cert.efset.org/ohBHQV' },
             
             // NASA
             { vendor: 'NASA', title: 'NASA Open Science Certified', date: new Date('2025-05-01'), url: 'https://www.credly.com/badges/720a03c2-7ab1-4618-a703-47a0f3daa6d4/public_url' },
-
-            // CompTIA
-            { vendor: 'CompTIA', title: 'CompTIA Security+', date: new Date('2024-05-24'), url: 'https://www.credly.com/badges/1aace285-e443-4881-a5f3-8748fb322ff3/public_url' },
 
             // Cisco
             { vendor: 'Cisco', title: 'Offensive Security Certificate in Ethical Hacking (OSCEH)', date: new Date('2025-07-01'), url: 'https://www.credly.com/badges/26b1b226-0f77-408f-825c-8632698f51a6/public_url' },
@@ -808,9 +808,9 @@
         // --- LOGO MAPPING ---
         // Maps vendor names to their shields.io badge URLs
         const logoMap = {
-            'EF SET': 'https://img.shields.io/badge/-EF%20SET-00b0d4?style=for-the-badge',
-            'NASA': 'https://img.shields.io/badge/-NASA-0B3D91?style=for-the-badge&logo=nasa&logoColor=white',
             'CompTIA': 'https://img.shields.io/badge/-CompTIA-D41B2C?style=for-the-badge&logo=comptia&logoColor=white',
+            'EF SET': 'https://img.shields.io/badge/-EF%20SET-00b0d4?style=for-the-badge',
+            'NASA': 'https://img.shields.io/badge/-NASA-0B3D91?style=for-the-badge&logo=nasa&logoColor=white'
             'Cisco': 'https://img.shields.io/badge/-Cisco-1BA0D7?style=for-the-badge&logo=cisco&logoColor=white',
             'The SecOps Group': 'https://img.shields.io/badge/-The%20SecOps%20Group-FF7F50?style=for-the-badge&logo=securityscorecard&logoColor=white',
             'Google': 'https://img.shields.io/badge/-Google-4285F4?style=for-the-badge&logo=google&logoColor=white',
